--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>NSCalendarsUsageDescription</key>
+	<string>For adding event to calendar</string>
+	<key>NSContactsUsageDescription</key>
+	<string>For adding event to calendar</string>
 </dict>
 </plist>
