--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: Add events to your calendar from screenshots!
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.2.2 <3.0.0'
+  sdk: ">=2.4.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,7 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
   add_2_calendar: ^1.4.0
+  fancy_on_boarding: ^1.5.0
+  firebase_core: ^0.4.4+3
+  firebase_ml_vision: ^0.9.3+8
   receive_sharing_intent: ^1.3.3
 
 dev_dependencies:
@@ -40,8 +44,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #  - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
