--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="app"
+        android:label="SaveDate"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
